--- a/silver_isp/static/src/css/general.css
+++ b/silver_isp/static/src/css/general.css
@@ -40,6 +40,6 @@
     right: 0;
 }
 
-div [name=ppp_speed_chart]{
+div [name=ppp_speed_chart],div [name=isp_radius_ids],div [name=ip_address_pool_ids], div [name=ip_address_ids] {
     width:100% !important;
 }
