--- a/silver_isp/views/isp_radius_line_views.xml
+++ b/silver_isp/views/isp_radius_line_views.xml
@@ -13,8 +13,14 @@
             <field name="model">isp.radius.line</field>
             <field name="arch" type="xml">
                 <tree string="Líneas de Radius ISP">
-                    <field name="name"/>
-                    <field name="radius_id"/>
+                    <field name="isp_radius_table_id"/>
+                    <field name="isp_radius_column_id"/>
+                    <field name="value_column"/>
+                    <field name="isp_radius_attribute_id"/>
+                    <field name="op"/>
+                    <field name="value"/>
+                    <field name="value_text"/>
+                    <field name="function_radius"/>
                 </tree>
             </field>
         </record>
@@ -26,9 +32,14 @@
                 <form string="Línea de Radius ISP">
                     <sheet>
                         <group>
-                            <field name="name"/>
-                            <field name="radius_id"/>
-
+                            <field name="isp_radius_table_id"/>
+                            <field name="isp_radius_column_id"/>
+                            <field name="value_column"/>
+                            <field name="isp_radius_attribute_id"/>
+                            <field name="op"/>
+                            <field name="value"/>
+                            <field name="value_text"/>
+                            <field name="function_radius"/>
                         </group>
                     </sheet>
                 </form>
